tests/NormalTests/paczka1/fuzzy1/58213017.err
Error in line 6: S913 S59 92,76
Error in line 10: S913 A721 66,8
Error in line 23: S913 A1-8 21,4
Error in line 22: u94wl1F S59 87,8
Error in line 32: w4l3AhPn S913 36,60
Error in line 21: w4l3AhPn S913 28,1
Error in line 26: S913 A158 44,9
